--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-exclude: 'docs|node_modules|migrations|.git|.tox|idea'
+exclude: 'docs|node_modules|migrations|.git|.tox|.idea'
 default_stages: [commit]
 fail_fast: true
 
