file system set and docs removed

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [flake8]
 max-line-length = 120
-exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,*/pkd_options.py
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,*/pkd_options.py,*/workspace.xml
 
 [pycodestyle]
 max-line-length = 120
-exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,*/pkd_options.py
+exclude = .tox,.git,*/migrations/*,*/static/CACHE/*,docs,node_modules,venv,*/pkd_options.py,*/workspace.xml
 
 [mypy]
 python_version = 3.8
