--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -1,6 +1,6 @@
 argon2-cffi==20.1.0  # https://github.com/hynek/argon2_cffi
 # redis==3.5.3  # https://github.com/andymccurdy/redis-py
-# hiredis==1.1.0  # https://github.com/redis/hiredis-py
+# hiredis==1.1.0  # https://github.com/redis/hiredis-pzy
 
 # Django
 # ------------------------------------------------------------------------------
@@ -12,6 +12,8 @@ django-storages[azure]==1.10.1  # https://github.com/jschneier/django-storages
 django-anymail[mailjet]==8.1  # https://github.com/anymail/django-anymail
 djongo==1.3.3
 sqlparse==0.2.4
+Pillow==8.0.1
+
 # REST
 djangorestframework==3.12.1
 # django-cors-headers==3.5.0 # https://github.com/adamchainz/django-cors-headers
