--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
-addopts = --ds=config.settings.test --reuse-db
+addopts = --ds=config.settings.test --reuse-db --nomigrations --ignore=venv
 python_files = tests.py test_*.py
