--- a/requirements_base.txt
+++ b/requirements_base.txt
@@ -11,6 +11,7 @@ django-environ==0.4.5  # https://github.com/joke2k/django-environ
 django-storages[azure]==1.10.1  # https://github.com/jschneier/django-storages
 django-anymail[mailjet]==8.1  # https://github.com/anymail/django-anymail
 djongo==1.3.3
+dnspython==2.0.0
 sqlparse==0.2.4
 Pillow==8.0.1
 
